--- a/app/templates/base.html.twig
+++ b/app/templates/base.html.twig
@@ -13,7 +13,7 @@
             <div class="container-fluid">
                 <a class="navbar-brand" href="{{ NAVBAR_BRAND_HREF is defined ? NAVBAR_BRAND_HREF : path('root') }}">
                     {% block NAVBAR_BRAND %}
-                        <img src="{{ asset('assets/images/icons/symfony.png') }}" alt="" width="30" height="27" class="d-inline-block align-text-top">
+                        <img src="{{ asset('assets/images/icons/app.png') }}" alt="" width="30" height="30" class="d-inline-block align-text-top">
                         {{ APP_NAME | upperword }}
                     {% endblock %}
                 </a>
