--- a/app/templates/AdminOffice/_partials/menu.html.twig
+++ b/app/templates/AdminOffice/_partials/menu.html.twig
@@ -1,5 +1,5 @@
 {% set activeRoute = app.request.attributes.get('_route') %}
-<ul class="navbar-nav">
+<ul class="navbar-nav me-auto mb-2 mb-lg-0">
     <li class="nav-item">
         <a class="nav-link {{ 'adminoffice.dashboard.' in activeRoute ? 'active' }}" href="{{ path('adminoffice.dashboard.index') }}">Dashboard</a>
     </li>
