--- a/app/templates/FrontOffice/Dashboard/index.html.twig
+++ b/app/templates/FrontOffice/Dashboard/index.html.twig
@@ -1,5 +1,55 @@
 {% extends "FrontOffice/base.html.twig" %}
 
-{% block body %}
-    <h1>FrontOffice/Dashboard:index</h1>
+{% block stylesheets %}
+    {{ parent() }}
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.1.3/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdn.datatables.net/1.12.1/css/dataTables.bootstrap5.min.css">
+{% endblock %}
+
+{% block sub_menu_title 'FrontOffice/DashboardController::index' %}
+
+{% block sub_menu_right %}
+    <li class="nav-item"><a class="btn btn-primary btn-sm" aria-current="page" href="{{ path('frontoffice.dashboard.new') }}"><i class="fa-solid fa-square-plus"></i> Project</a></li>
+{% endblock %}
+
+{% block content %}
+    <table id="datatable" class="table table-striped table-hover" style="width:100%" data-page-length="25" data-order="[[ 1, &quot;asc&quot; ]]">
+        <thead>
+            <tr>
+                <th scope="col" style="max-width: 12rem;">#</th>
+                <th scope="col">Name</th>
+                <th scope="col" data-orderable="false" style="max-width: 3rem;">Source file</th>
+                <th scope="col" data-orderable="false" style="max-width: 3rem;">Config file</th>
+                <th scope="col" data-orderable="false" style="max-width: 1rem;">Action</th>
+            </tr>
+        </thead>
+        <tbody>
+        {% for project in projects %}
+            <tr>
+                <td>{{ project.id }}</td>
+                <td>{{ project.name }}</td>
+                <td>
+                    {% if project.sourceConfig %}
+                        <a href="{{ MINIO_ENDPOINT ~ vich_uploader_asset(project, 'sourceConfigFile') }}" target="_blank">
+                            <i class="fa-solid fa-file-arrow-up"></i>
+                        </a>
+                    {% else %}
+                        <span class="text-muted">none</span>
+                    {% endif %}
+                </td>
+                <td>#</td>
+                <td class="pt-1 pb-1 text-end">
+                    <div class="btn-group btn-group-sm" role="group">
+                        <a href="{{ path('frontoffice.dashboard.project', {'project': project.id}) }}" class="btn btn-primary"><i class="fa-solid fa-eye"></i></a>
+                    </div>
+                </td>
+            </tr>
+        {% endfor %}
+        </tbody>
+    </table>
+{% endblock %}
+
+{% block javascripts %}
+    {{ parent() }}
+    {{ encore_entry_script_tags('app_frontoffice_dashboard_index') }}
 {% endblock %}
