--- a/app/templates/FrontOffice/Dashboard/new.html.twig
+++ b/app/templates/FrontOffice/Dashboard/new.html.twig
@@ -1,7 +1,7 @@
 {% extends "FrontOffice/base.html.twig" %}
 
-{% block sub_menu_title_href path('adminoffice.authentication.provider.microsoft.index') %}
-{% block sub_menu_title 'AdminOffice/Authentication/Provider/MicrosoftController::index' %}
+{% block sub_menu_title_href path('frontoffice.dashboard.new') %}
+{% block sub_menu_title 'FrontOffice/DashboardController::new' %}
 
 {% block content %}
     <div class="row justify-content-center">
