--- a/app/templates/FrontOffice/base.html.twig
+++ b/app/templates/FrontOffice/base.html.twig
@@ -1,6 +1,6 @@
 {% extends "base.html.twig" %}
 
-{% set NAVBAR_CLASS = "navbar-dark bg-primary" %}
+{% set NAVBAR_CLASS = "navbar-dark bg-dark" %}
 {% set NAVBAR_BRAND_HREF = path('root') %}
 
 {% block NAVBAR_COLLAPSE %}
@@ -9,7 +9,7 @@
     <div class="d-flex align-items-center">
         <div class="flex-shrink-0 dropdown">
             <a href="#" class="d-block link-light text-decoration-none dropdown-toggle" id="dropdownUser2" data-bs-toggle="dropdown" aria-expanded="false">
-                <img src="https://github.com/mdo.png" alt="mdo" width="32" height="32" class="rounded-circle">
+                <img src="https://www.pavilionweb.com/wp-content/uploads/2017/03/user-300x300.png" alt="mdo" width="32" height="32" class="rounded-circle">
             </a>
             <ul class="dropdown-menu text-small shadow  dropdown-menu-end" aria-labelledby="dropdownUser2" style="">
                 <li><h6 class="dropdown-header">{{ app.user.username | upperword }}</h6></li>
