--- a/app/templates/_profiler/Helper/template.html.twig
+++ b/app/templates/_profiler/Helper/template.html.twig
@@ -21,7 +21,7 @@
         <div class="sf-toolbar-info-piece">
             <b>PhpMyAdmin</b>
             <span>
-                <a href="{{ APP_URI }}/phpmyadmin" target="_blank">{{ APP_URI }}/phpmyadmin</a>
+                <a href="{{ APP_URI }}/phpmyadmin" target="_blank">{{ APP_URI }}/phpmyadmin/</a>
             </span>
         </div>
         <div class="sf-toolbar-info-piece">
