--- a/app/templates/FrontOffice/Dashboard/project._base.html.twig
+++ b/app/templates/FrontOffice/Dashboard/project._base.html.twig
@@ -4,4 +4,5 @@
     <li class="nav-item"><a class="nav-link" aria-current="page" href="{{ path('frontoffice.dashboard.project.overview', {'project': project.id}) }}">Overview</a></li>
     <li class="nav-item"><a class="nav-link" aria-current="page" href="{{ path('frontoffice.dashboard.project.config.source', {'project': project.id}) }}">Source config</a></li>
     <li class="nav-item"><a class="nav-link" aria-current="page" href="{{ path('frontoffice.dashboard.project.config.destination', {'project': project.id}) }}">Export config</a></li>
+    <li class="nav-item"><a class="nav-link" aria-current="page" href="{{ path('frontoffice.dashboard.project.edit', {'project': project.id}) }}">Configure</a></li>
 {% endblock %}
