--- a/app/templates/FrontOffice/Dashboard/index.html.twig
+++ b/app/templates/FrontOffice/Dashboard/index.html.twig
@@ -13,20 +13,19 @@
 {% endblock %}
 
 {% block content %}
-    <table id="datatable" class="table table-striped table-hover" style="width:100%" data-page-length="25" data-order="[[ 1, &quot;asc&quot; ]]">
+    <table id="datatable" class="table table-striped table-hover" style="width:100%" data-page-length="25" data-order="[[ 3, &quot;desc&quot; ]]">
         <thead>
             <tr>
-                <th scope="col" style="max-width: 12rem;">#</th>
                 <th scope="col">Name</th>
                 <th scope="col" data-orderable="false" style="max-width: 3rem;">Source file</th>
                 <th scope="col" data-orderable="false" style="max-width: 3rem;">Config file</th>
+                <th scope="col" style="max-width: 3rem;">Created date</th>
                 <th scope="col" data-orderable="false" style="max-width: 1rem;">Action</th>
             </tr>
         </thead>
         <tbody>
         {% for project in projects %}
             <tr>
-                <td>{{ project.id }}</td>
                 <td>{{ project.name }}</td>
                 <td>
                     {% if project.sourceConfig %}
@@ -37,7 +36,12 @@
                         <span class="text-muted">none</span>
                     {% endif %}
                 </td>
-                <td>#</td>
+                <td>
+                    <a href="{{ path('frontoffice.dashboard.project.config.destination', {'project': project.id}) }}" target="_blank">
+                        <i class="fa-solid fa-file-arrow-down"></i>
+                    </a>
+                </td>
+                <td>{{ project.createdDate | date("m/d/Y h:i a") | upper }}</td>
                 <td class="pt-1 pb-1 text-end">
                     <div class="btn-group btn-group-sm" role="group">
                         <a href="{{ path('frontoffice.dashboard.project', {'project': project.id}) }}" class="btn btn-primary"><i class="fa-solid fa-eye"></i></a>
